# olx-api-scraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scrape.py  setup.cfg  workflow.yml
.github/workflows/: main.yml  python-package.yml
app/Scripts/: activate  activate.bat
olx-api-scraper/: scrape.py
tests/: test_scrape.py
