[metadata]
name = olx-api-scraper
version = 0.1.0
description = a way to scrape OLX data
author = Marcin Kucharski
url = https://github.com/dixone23/olx-api-scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    find:
python_requires = >=3.8
include_package_data = True
